# hmsc-hpc

./: .gitignore  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.py.lumi  tox.ini
.github/workflows/: ci.yml
custom_ops/: magma_cholesky.cu.cc
docs/: Makefile  conf.py  csc_install.md  csc_sbatch_example.sh  index.rst  installation.rst  make.bat  usage.rst
examples/: demo-sampler-v1.ipynb  test.py
examples/basic_example/: example.Rmd  example.html  example.nb.html
examples/big_spatial/: fit.R  readExecTimes.R  run_fit.sh  verify_interchangeability.R
hmsc/: __init__.py  debug.py  gibbs_sampler.py  run_gibbs_sampler.py
hmsc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hmsc/custom_operators/: .gitignore  __init__.py  magma_cholesky.cc  magma_cholesky.cu.cc  magma_cholesky.h  magma_cholesky.py  notes.txt
hmsc/examples/: __init__.py  demo_gibbs_sampler.R  demo_gibbs_sampler_TD_m.R  demo_gibbs_sampler_models.R  demo_gibbs_sampler_with_plotting.R  run_gibbs_sampler.py
hmsc/magma_cholesky/: Makefile  magma_cholesky.cc  magma_cholesky.cu.cc  magma_cholesky.h  magmafunc.py
hmsc/ops/: __init__.py  _cholesky.py  cholesky.py
hmsc/test/: __init__.py  test_gibbs_sampler.py  test_rl_init.py  test_update_z.py  updateAlpha_test.py  updateBetaLambda_test.py  updateBetaSel_test.py  (+11 more)
notebooks/: pg-demo-python.ipynb  pg-demo-tf.ipynb
tests/: __init__.py  test_gibbs_sampler.py
tmp/: marginalized_rho_sampler.md
(+39 files in other folders)
